# pyrokinetics

./: .codecov.yml  .coveragerc  .environment.yaml  .flake8  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  ;  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_cgyro.cgyro  test_cgyro.gs2
.github/workflows/: black.yml  ci.yml  docker_publish.yml  draft-pdf.yml  flake8.yml  python_publish.yml  tests.yml
docs/: Makefile  api.rst  conf.py  index.rst
docs/api/: modules.rst  pyrokinetics.cli.convert.rst  pyrokinetics.cli.entrypoint.rst  pyrokinetics.cli.generate.rst  pyrokinetics.cli.rst  pyrokinetics.constants.rst  pyrokinetics.dataset_wrapper.rst  pyrokinetics.decorators.rst  pyrokinetics.diagnostics.Diagnostics.rst  pyrokinetics.diagnostics.rst  pyrokinetics.equilibrium.equilibrium.rst  pyrokinetics.equilibrium.flux_surface.rst  pyrokinetics.equilibrium.geqdsk.rst  pyrokinetics.equilibrium.rst  pyrokinetics.equilibrium.transp.rst  pyrokinetics.equilibrium.utils.rst  pyrokinetics.factory.rst  pyrokinetics.gk_code.GKInput.rst  pyrokinetics.gk_code.GKInputCGYRO.rst  pyrokinetics.gk_code.GKInputGENE.rst  pyrokinetics.gk_code.GKInputGS2.rst  pyrokinetics.gk_code.GKInputTGLF.rst  pyrokinetics.gk_code.GKOutputReader.rst  pyrokinetics.gk_code.GKOutputReaderCGYRO.rst  pyrokinetics.gk_code.GKOutputReaderGENE.rst  pyrokinetics.gk_code.GKOutputReaderGS2.rst  pyrokinetics.gk_code.GKOutputReaderTGLF.rst  pyrokinetics.gk_code.rst  pyrokinetics.kinetics.Kinetics.rst  pyrokinetics.kinetics.KineticsReader.rst  pyrokinetics.kinetics.KineticsReaderJETTO.rst  pyrokinetics.kinetics.KineticsReaderSCENE.rst  pyrokinetics.kinetics.KineticsReaderTRANSP.rst  pyrokinetics.kinetics.KineticsReaderpFile.rst  pyrokinetics.kinetics.rst  pyrokinetics.local_geometry.LocalGeometry.rst  pyrokinetics.local_geometry.LocalGeometryFourierCGYRO.rst  pyrokinetics.local_geometry.LocalGeometryFourierGENE.rst  pyrokinetics.local_geometry.LocalGeometryMXH.rst  pyrokinetics.local_geometry.LocalGeometryMiller.rst  (+15 more)
docs/design/: pyroscan_unit_persistence.md
docs/developer_guide/: contributing_guide.rst  writing_docs.rst
docs/examples/: bicoherence.rst  example.py  example_JETTO.py  example_JETTO_1dscan.py  example_JETTO_1dscan_complicated.py  example_PFILE.py  example_SCENE.py  example_TRANSP.py  example_add_bespoke_gk_output_data.py  example_addflags.py  example_cgyro.py  example_cgyro_to_stella.py  example_create_pyroscan.py  example_enforce_pvg.py  example_gene.py  example_generate_global_profiles.py  example_gs2.py  example_gs2_gp.py  example_gx.py  example_ideal_ballooning.py  example_imas.py  example_merge_species.py  example_modify_shear.py  example_neoclassical.py  example_nonlinear_cgyro.py  example_nonzonal.py  example_poincare.py  example_pyro.py  example_pyro_jetto_bootstrap_comparison.py  example_pyro_to_netcdf.py  example_pyroscan_tglf_saturation.py  example_pyroscan_to_netcdf.py  example_read_cgyro_output.py  example_read_gene_output.py  example_read_gs2_output.py  example_read_pyroscan_output.py  example_read_tglf_linear.py  example_read_tglf_transport.py  example_real_space_3d.py  example_real_space_moment.py  (+11 more)
docs/howtos/: convert.rst  field_line.rst  gene_flux_spectra.rst  index.rst  linear_outputs.rst  merge_species.rst  normalisations.rst  parameter_scans.rst  read_eq_prof.rst  read_nonlinear_data.rst  real_space_plotting.rst  stella_input_versions.rst  syn_hkdbs.rst
docs/joss/: paper.bib  paper.md
docs/rst_docs/: cgyro.rst  equilibrium.rst  equilibrium_new.rst  gene.rst  gk_code.rst  gk_input.rst  gk_input_cgyro.rst  gk_input_gene.rst  gk_input_gs2.rst  gk_output.rst  gs2.rst  intro.rst  kinetics.rst  local_geometry.rst  local_species.rst  metric_terms.rst  miller.rst  normalisation.rst  numerics.rst  pyro.rst
docs/tutorials/: equilibrium.rst  file_readers.rst  index.rst  kinetics.rst  using_pyrokinetics_on_hpc_systems.rst
docs/user_guide/: analysis.rst  collisions.rst  flowshear.rst  getting_started.rst  index.rst  miller.rst  modify_shear.rst  structure.rst
exb_scan/: pyroscan.json
exb_scan/gamma_exb_0.000/: input.cgyro
exb_scan/gamma_exb_0.050/: input.cgyro
exb_scan/gamma_exb_0.100/: input.cgyro
exb_scan/gamma_exb_0.150/: input.cgyro
exb_scan/gamma_exb_0.200/: input.cgyro
pyrokinetics/: __init__.py  cgyro.py  cluster.py  constants.py  dataset_wrapper.py  decorators.py  equilibrium.py  factory.py  file_utils.py  gene.py  geqdsk.py  gk_code.py  gk_output.py  gs2.py  kinetics.py  local_geometry.py  local_species.py  metadata.py  miller.py  normalisation.py  numerics.py  plugins.py  pyro.py  pyro_refactor.py  pyroscan.py  readers.py  species.py  speciesLocal.py  templates.py  typing.py  units.py
pyrokinetics/cli/: __init__.py  convert.py  entrypoint.py
pyrokinetics/databases/: __init__.py  imas.py
pyrokinetics/diagnostics/: Diagnostics.py  __init__.py
pyrokinetics/equilibrium/: Equilibrium.py  EquilibriumReader.py  EquilibriumReaderGEQDSK.py  EquilibriumReaderTRANSP.py  __init__.py  equilibrium.py  equilibrium_units.py  flux_surface.py  geqdsk.py  get_flux_surface.py  transp.py  utils.py
pyrokinetics/examples/: compare_tglf_linear.py  example.py  example_JETTO.py  example_JETTO_1dscan.py  example_JETTO_1dscan_complicated.py  example_PFILE.py  example_SCENE.py  example_TRANSP.py  example_addflags.py  example_cgyro.py  example_gene.py  example_geqdsk.py  example_gs2.py  example_imas.py  example_poincare.py  example_pyro.py  example_pyro_alt.py  example_read_cgyro_output.py  example_read_gene_output.py  example_read_gs2_output.py  example_read_tglf_linear.py  example_read_tglf_transport.py  example_real_space_moment.py  example_submit_job.py
pyrokinetics/gk_code/: CGYRO.py  GENE.py  GKCode.py  GKCodeCGYRO.py  GKCodeGENE.py  GKCodeGS2.py  (+33 more)
tests/: conftest.py  test_decorators.py  test_deepcopy.py  test_file_utils.py  test_local_species.py  test_normalisation.py  test_numerics.py  test_plugins.py  test_pyro.py  test_pyroscan.py  test_roundtrip.py  test_simulation.py  test_species.py
(+1246 files in other folders)
