[project]
name = "pyrokinetics"
description = "Python package for running and analysing gyrokinetic simulations"
readme = "README.md"
authors = [
    {name = "Bhavin Patel", email = "bhavin.s.patel@ukaea.uk"}
]
license = {file = "LICENSE"}
dynamic = ["version"]
keywords = ["gyrokinetics", "analysis", "plasma", "research"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.9"
dependencies = [
    "numpy >= 1.20.3",
    "matplotlib >= 3.3.4",
    "f90nml >= 1.4.2",
    "scipy >= 1.10.1",
    "h5py >= 2.10",
    "netCDF4 >= 1.5.6",
    "path >= 15.1.2",
    "wheel >= 0.36",
    "freeqdsk >= 0.3",
    "cleverdict >= 1.9.1",
    "xarray >= 0.10",
    "pint ~= 0.23",
    "pint-xarray ~= 0.3",
    "contourpy ~= 1.0",
    "xrft >= 1.0.0",
    "idspy-dictionaries == 34000.2.0",
    "idspy-toolkit == 0.6.5",
    "pyloidal ~= 0.2.0",
    "xmltodict ~= 0.13.0",
    "typing-extensions >= 4.6.0",
    "simplejson >= 3.17.6",
    "jetto-tools",
]

[project.optional-dependencies]
docs = [
    "sphinx >= 5.3",
    "sphinx_autodoc_typehints >= 1.19",
    "sphinx-book-theme >= 0.4.0rc1",
    "myst_parser >= 0.14.0",
]
tests = [
    "pytest >= 3.3.0",
    "pytest-cov",
    "pyrokinetics-plugin-examples == 0.2.1",
]
linting = [
  "black",
  "isort",
  "flake8",
]

[project.urls]
Source = "https://github.com/pyro-kinetics/pyrokinetics"
Tracker = "https://github.com/pyro-kinetics/pyrokinetics/issues"
Documentation = "https://pyrokinetics.readthedocs.io/en/latest/"

[project.scripts]
pyro = "pyrokinetics.cli:entrypoint"

[build-system]
requires = [
    "setuptools >= 65",
    "setuptools-scm[toml]", # Used to manage package data, not for versioning
    "versioningit",
]
build-backend = "setuptools.build_meta"

[tool.versioningit]
vcs = { method = "git", default-tag = "v0.1.0" }
next-version = { method = "smallest" }

[tool.versioningit.write]
file = "src/pyrokinetics/_version.py"
template = """
__version__ = "{version}"
__version_tuple__ = {version_tuple}
__commit__ = "{revision}""""

# versioningit setup to mimic setuptools-scm versions
[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyrokinetics = ["templates/*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
relative_files = true
omit = [
    "_version.py",
    "__main__.py",
    "__init__.py",
]

[tool.coverage.paths]
source = [
  "src/",
  "*/site-packages",
]

[tool.black]
exclude = "_version.py"

[tool.isort]
profile = "black"
