[metadata]
name = pyrokinetics
description = Python package for running and analysing gyrokinetic simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyro-kinetics/pyrokinetics
author = Bhavin Patel
author_email = bhavin.s.patel@ukaea.uk
license = LGPL
license_file = LICENSE
keywords = gyrokinetics, analysis, plasma, research
python_requires = >= 3.8
classifiers =
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Natural Language :: English
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Source = https://github.com/pyro-kinetics/pyrokinetics
    Tracker = https://github.com/pyro-kinetics/pyrokinetics/issues

[options]
packages = find:
include_package_data = True
install_requires =
    numpy >= 1.20.3
    f90nml >= 1.3, != 1.4.0
    scipy >= 1.9.3
    netCDF4 >= 1.5.6
    path >= 15.1.2
    wheel >= 0.36
    freegs >= 0.6
    numpy >= 1.20.3
    cleverdict >= 1.9.1
    xarray >= 0.10
    pint ~= 0.20.1
    pint-xarray ~= 0.3
    scikit-image ~= 0.19

[options.extras_require]
docs =
    sphinx == 3.5.4
    myst_parser == 0.14.0
    jinja2 < 3.1.0
    sphinx_rtd_theme
tests = pytest >= 3.3.0

[options.package_data]
* = README.md, pyrokinetics/templates/*

[build_sphinx]
source-dir = docs

[flake8]
max-line-length = 160
extend-ignore = E203, W503
per-file-ignores = __init__.py:F401, E402
